Reshape JFA diagnose UX: reportfile layout, interactive confirm, slim reports.
Prefer existing JVM hprof/GC evidence, drop trading-hours/require.confirm knobs,
write reports under install/reportfile/pid_*/timestamp, and print absolute paths.

Co-authored-by: liuSir-China <liuSir-China@users.noreply.github.com>