@@ -14,15 +14,20 @@ public class EvidenceAndConfigTest {
     public TemporaryFolder tmp = new TemporaryFolder();
 
     @Test
-    public void helpConfigIsCopyPasteableAndNotPrerequisite() {
+    public void helpConfigIsTablesPlusBashOnlyJdk8() {
         String t = RecommendedJvmConfig.fullHelpConfig();
         Assert.assertTrue(t.contains("不是使用本产品的前提") || t.contains(JfaConstants.EVIDENCE_ENHANCE_OPTIONAL));
         Assert.assertTrue(t.contains("HeapDumpOnOutOfMemoryError"));
         Assert.assertTrue(t.contains("HeapDumpPath"));
         Assert.assertTrue(t.contains("-Xloggc") || t.contains("PrintGC"));
         Assert.assertTrue(t.contains("UseGCLogFileRotation") || t.contains("NumberOfGCLogFiles"));
-        Assert.assertTrue(t.contains("[Service]") || t.contains("Environment="));
+        Assert.assertTrue(t.contains("| 参数 |") || t.contains("|------|"));
         Assert.assertTrue(t.contains("#!/bin/bash") || t.contains("JAVA_OPTS"));
+        Assert.assertFalse(t.contains("Environment="));
+        Assert.assertFalse(t.contains("[Service]"));
+        Assert.assertFalse(t.contains("ExecStart="));
+        Assert.assertFalse(t.contains("JDK 11"));
+        Assert.assertFalse(t.contains("-Xlog:gc"));
         Assert.assertFalse(t.toLowerCase().contains("mat"));
         Assert.assertFalse(t.contains("jfa start") && t.indexOf("不要先 start") < 0);
     }
@@ -57,5 +62,17 @@ public class EvidenceAndConfigTest {
         Assert.assertFalse(newF.exists() && r.deleted.toString().contains("new.hprof") && !newF.exists());
         Assert.assertTrue(newF.exists());
         Assert.assertFalse(oldF.exists());
+    }
+
+    @Test
+    public void evidenceGcDoesNotDeleteOutsideManagedDirs() throws Exception {
+        JfaConfig cfg = JfaConfig.defaults();
+        cfg.setEvidenceRoot(tmp.getRoot());
+        File outside = new File(tmp.getRoot(), "app-dumps/java_pid1.hprof");
+        outside.getParentFile().mkdirs();
+        Assert.assertTrue(outside.createNewFile());
+        outside.setLastModified(System.currentTimeMillis() - 10L * 24 * 3600 * 1000);
+        EvidenceGc.GcReport r = new EvidenceGc().gc(cfg, null, true);
+        Assert.assertFalse(r.deleted.toString().contains("java_pid1.hprof"));
     }
 }
